--- a/git/buildspec.yml
+++ b/git/buildspec.yml
@@ -14,8 +14,8 @@ phases:
   build:
     commands:
       - echo "Planeando y aplicando Terraform..."
-      - terraform plan -out=tfplan -input=false
-      - terraform apply -auto-approve tfplan
+      - terraform plan -input=false
+      - terraform apply -auto-approve
 artifacts:
   files:
     - "**/*"
