--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,6 +5,9 @@ phases:
       python: 3.12
     commands:
       - echo "Instalando dependencias necesarias"
+      - curl -L -o terraform.zip https://releases.hashicorp.com/terraform/1.5.7/terraform_1.5.7_linux_amd64.zip
+      - unzip terraform.zip
+      - mv terraform /usr/local/bin/
       - pip install --upgrade awscli
       - curl -sSL https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
       - terraform --version
@@ -17,9 +20,6 @@ phases:
       - terraform apply -auto-approve
       - export VPC_ID=$(terraform output -raw vpc_id)
       - echo "VPC_ID=${VPC_ID}"
-    post_build:
-      commands:
-      - echo "Ejecución completada. VPC_ID=${VPC_ID}"
   build:
     commands:
       - echo "Configurando kubectl para EKS"
@@ -31,12 +31,13 @@ phases:
           --set clusterName=eks-rdg \
           --set awsRegion=us-east-1 \
           --set awsVpcID=$VPC_ID \
-          --namespace kube-system          
-    post_build:
-      commands:
-        - echo "Desplegando aplicación"
-        - kubectl apply -f app-deployment.yaml
-        - echo "Despliegue completado"
+          --namespace kube-system
+  post_build:
+    commands:
+      - echo "Desplegando aplicación"
+      - kubectl apply -f app-deployment.yaml
+      - echo "Despliegue completado"
+      - echo "Ejecución completada. VPC_ID=${VPC_ID}"
 artifacts:
   files:
     - '**/*'
