--- a/buildspec.yml
+++ b/buildspec.yml
@@ -30,16 +30,13 @@ phases:
       - echo "Instalando AWS Load Balancer Controller"
       - helm repo add eks https://aws.github.io/eks-charts
       - helm repo update
-      - helm install aws-load-balancer-controller eks/aws-load-balancer-controller \
-          --set clusterName=$CLUSTER_NAME \
-          --set awsRegion=us-east-1 \
-          --set awsVpcID=$VPC_ID \
-          --namespace kube-system
+      - helm install aws-load-balancer-controller eks/aws-load-balancer-controller --set clusterName=$CLUSTER_NAME --set awsRegion=us-east-1 --set awsVpcID=$VPC_ID --namespace kube-system
   post_build:
     commands:
       - echo "Desplegando aplicación"
       - kubectl apply -f app-deployment.yaml
       - echo "Despliegue completado"
+      - echo "Ejecución completada. VPC_ID=${VPC_ID}"
 artifacts:
   files:
     - '**/*'
