--- a/app-deployment.yaml
+++ b/app-deployment.yaml
@@ -2,9 +2,9 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: app-ambrosia
+  namespace: app-ambrosia-namespace
   labels:
     app: app-ambrosia
-    version: v2
 spec:
   replicas: 2
   selector:
@@ -20,7 +20,7 @@ spec:
         image: nginx:latest
         ports:
         - containerPort: 80
-        resources:           # Debe estar aquí, al mismo nivel que ports.
+        resources:
           requests:
             memory: "128Mi"
             cpu: "250m"
@@ -31,7 +31,8 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: app-ambrosia-nginx
+  name: app-ambrosia-service
+  namespace: app-ambrosia-namespace
 spec:
   selector:
     app: app-ambrosia
@@ -40,16 +41,17 @@ spec:
       port: 80
       targetPort: 80
   type: LoadBalancer
-
 ---
-
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: app-ingress
+  name: app-ambrosia-ingress
+  namespace: app-ambrosia-namespace
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    alb.ingress.kubernetes.io/scheme: internet-facing
+    alb.ingress.kubernetes.io/target-type: ip
+    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80,"HTTPS":443}]'
+    alb.ingress.kubernetes.io/certificate-arn: "arn:aws:acm:us-east-1:123456789012:certificate/abcde12345-6789-0123-4567-abcdef123456"
 spec:
   rules:
   - host: app-ambrosia.cloudaws.cl
@@ -59,7 +61,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: app-ambrosia-nginx
+            name: app-ambrosia-service
             port:
               number: 80
   tls:
