--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,7 +17,7 @@ phases:
     commands:
       - echo "Iniciando Terraform"
       - terraform init
-      - terraform apply -auto-approve
+      - terraform apply -auto-approve || { echo "Terraform falló, ejecutando terraform destroy"; terraform destroy -auto-approve; exit 1; }
       - terraform output -raw cluster_name > cluster_name.txt
       - export CLUSTER_NAME=$(cat cluster_name.txt)
       - echo "Cluster Name=$CLUSTER_NAME"
@@ -26,22 +26,18 @@ phases:
   build:
     commands:
       - echo "Configurando kubectl para EKS"
-      - aws eks update-kubeconfig --region us-east-1 --name $CLUSTER_NAME
+      - aws eks update-kubeconfig --region us-east-1 --name $CLUSTER_NAME || { echo "Error al configurar kubectl, ejecutando terraform destroy"; terraform destroy -auto-approve; exit 1; }
       - echo "Instalando AWS Load Balancer Controller"
       - helm repo add eks https://aws.github.io/eks-charts
       - helm repo update
-      - helm install aws-load-balancer-controller eks/aws-load-balancer-controller --set clusterName=$CLUSTER_NAME --set awsRegion=us-east-1 --set awsVpcID=$VPC_ID --namespace kube-system
+      - helm install aws-load-balancer-controller eks/aws-load-balancer-controller --set clusterName=$CLUSTER_NAME --set awsRegion=us-east-1 --set awsVpcID=$VPC_ID --namespace kube-system || { echo "Error en Helm, ejecutando terraform destroy"; terraform destroy -auto-approve; exit 1; }
   post_build:
     commands:
       - echo "Desplegando aplicación"
-      - kubectl apply -f namespace.yaml
-      - kubectl apply -f app-deployment.yaml
+      - kubectl apply -f namespace.yaml || { echo "Error en el despliegue, ejecutando terraform destroy"; terraform destroy -auto-approve; exit 1; }
+      - kubectl apply -f app-deployment.yaml || { echo "Error en el despliegue, ejecutando terraform destroy"; terraform destroy -auto-approve; exit 1; }
       - echo "Despliegue completado"
       - echo "Ejecución completada. VPC_ID=${VPC_ID}"
-  on_failure:
-    commands:
-      - echo "Error en el despliegue, ejecutando terraform destroy"
-      - terraform destroy -auto-approve
 artifacts:
   files:
     - '**/*'
