--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,26 +13,29 @@ phases:
       - terraform --version
       - helm version
       - aws eks --version
-  pre_build:
+pre_build:
     commands:
-      - echo "Iniciando Terraform"
-      - terraform init
-      - terraform apply
-      - terraform output -raw cluster_name > cluster_name.txt
-      - export CLUSTER_NAME=$(cat cluster_name.txt)
-      - echo "Cluster Name=$CLUSTER_NAME"
-      - export VPC_ID=$(terraform output -raw vpc_id)
-      - echo "VPC_ID=${VPC_ID}"
-  build:
+        - echo "Preparando Terraform para aplicar cambios"
+        - terraform init
+build:
     commands:
+        - echo "Aplicando cambios de Terraform"
+        - terraform apply -auto-approve tfplan
+        - echo "Cambios aplicados exitosamente."
+
+        - terraform output -raw cluster_name > cluster_name.txt
+        - export CLUSTER_NAME=$(cat cluster_name.txt)
+        - echo "Cluster Name=$CLUSTER_NAME"
+        - export VPC_ID=$(terraform output -raw vpc_id)
+        - echo "VPC_ID=${VPC_ID}"
+post_build:
+  commands:
       - echo "Configurando kubectl para EKS"
       - aws eks update-kubeconfig --region us-east-1 --name $CLUSTER_NAME
       - echo "Instalando AWS Load Balancer Controller"
       - helm repo add eks https://aws.github.io/eks-charts
       - helm repo update
       - helm install aws-load-balancer-controller eks/aws-load-balancer-controller --set clusterName=$CLUSTER_NAME --set awsRegion=us-east-1 --set awsVpcID=$VPC_ID --namespace kube-system
-  post_build:
-    commands:
       - echo "Desplegando aplicación"
       - echo "Despliegue completado"
       - echo "Ejecución completada. VPC_ID=${VPC_ID}"
