--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,29 +13,38 @@ phases:
       - terraform --version
       - helm version
       - aws eks --version
-pre_build:
+  pre_build:
     commands:
-      - echo "Preparando Terraform para aplicar cambios"
+      - echo "Preparando Terraform"
       - terraform init
+      - echo "Generando plan de Terraform"
+      - terraform plan -out=tfplan
       - echo "Aplicando cambios de Terraform"
-      - terraform apply -auto-approve
-build:
-    commands:        
-      - echo "Cambios aplicados exitosamente."
+      - terraform apply -auto-approve tfplan
+  build:
+    commands:
+      - echo "Exportando variables de Terraform"
       - terraform output -raw cluster_name > cluster_name.txt
       - export CLUSTER_NAME=$(cat cluster_name.txt)
       - echo "Cluster Name=$CLUSTER_NAME"
       - export VPC_ID=$(terraform output -raw vpc_id)
       - echo "VPC_ID=${VPC_ID}"
-post_build:
+  post_build:
     commands:
       - echo "Configurando kubectl para EKS"
       - aws eks update-kubeconfig --region us-east-1 --name $CLUSTER_NAME
+      - echo "Verificando namespace kube-system"
+      - kubectl get namespace kube-system || kubectl create namespace kube-system
       - echo "Instalando AWS Load Balancer Controller"
       - helm repo add eks https://aws.github.io/eks-charts
       - helm repo update
-      - helm install aws-load-balancer-controller eks/aws-load-balancer-controller --set clusterName=$CLUSTER_NAME --set awsRegion=us-east-1 --set awsVpcID=$VPC_ID --namespace kube-system
+      - helm install aws-load-balancer-controller eks/aws-load-balancer-controller \
+          --set clusterName=$CLUSTER_NAME \
+          --set awsRegion=us-east-1 \
+          --set awsVpcID=$VPC_ID \
+          --namespace kube-system
       - echo "Desplegando aplicación"
+      - kubectl apply -f deployment.yaml
       - echo "Despliegue completado"
       - echo "Ejecución completada. VPC_ID=${VPC_ID}"
 artifacts:
