--- a/buildspec_d.yaml
+++ b/buildspec_d.yaml
@@ -16,6 +16,8 @@ phases:
   pre_build:
     commands:
       - echo "Iniciando delete"
+      - terraform init
+      - echo "Iniciando delete"
       - terraform destroy -auto-approve
   build:
     commands:
